# SCTK

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  TODO  environment.yml
doc/: options.htm
src/: CMakeLists.txt
src/acomp/: CMakeLists.txt
src/align2html/: CMakeLists.txt  align2html-main.pl  buildInstallVersion.pl
src/asclite/: CMakeLists.txt  makefile
src/asclite/core/: CMakeLists.txt  alignedsegment.cpp  alignedsegmentiterator.cpp  alignedsegmentiterator.h  alignedspeech.cpp  alignedspeech.h  alignedspeechiterator.cpp  alignedspeechiterator.h  alignment.cpp  alignment.h  compressedlevenshteinmatrix.cpp  ctmstmrttm_segmentor.h  graph.cpp  graph_coordinate.h  graphalignedtoken.cpp  graphalignedtoken.h  inputparser.h  levenshtein.cpp  linestyle_inputparser.h  recording.cpp  sgml_reportgenerator.h  stt_scorer.cpp  timedobject.h  uemfilter.h
src/asclite/test/: CMakeLists.txt  std_benchmark.cpp  test_ctm_inputparser.cpp  test_levenshtein.cpp  test_unit.cpp  timeval.h  tokenalignment_test.cpp
src/asclite/testfiles/: ascliteTest.pl
src/chfilt/: CMakeLists.txt  ChfiltTests.pl  chfilt.pl  makefile.in
src/csrfilt/: CMakeLists.txt  CsrfiltTests.pl  RunTests.pl  csrfilt.pl  makefile.in
src/ctmValidator/: CMakeLists.txt  CtmValidatorTests.pl  makefile.in
src/def_art/: CMakeLists.txt
src/hamzaNorm/: CMakeLists.txt  HamzaNormTests.pl  makefile.in
src/hubscr/: CMakeLists.txt  HubscrTests.pl  RunTests.pl  hubscr.pl
src/hubscr/test1-sastt.base/: sastt-case1.ref.rttm.filt  sastt-case1.sys.rttm  sastt-case1.sys.rttm.filt  sastt-case1.sys.rttm.filt.aligninfo.csv  sastt-case1.sys.rttm.filt.mdeval  sastt-case1.sys.rttm.filt.mdeval.spkrmap  sastt-case1.sys.rttm.filt.pra  sastt-case1.sys.rttm.filt.prf  sastt-case1.sys.rttm.filt.sgml
src/hubscr/test1-sastt.base/sastt-case1.sys.rttm.filt.alignments/: ICSI_20011030-1030_dstar_NONE_1.html  index.html
src/hubscr/test2-sastt.base/: sastt-case2.sys.rttm.filt.aligninfo.csv
src/hubscr/test2-sastt.base/sastt-case2.sys.rttm.filt.alignments/: segmentgroup-116.html
src/md-eval/: CMakeLists.txt
src/mergectm2rttm/: CMakeLists.txt  mergectm2rttm.pl
src/rfilter1/: CMakeLists.txt  RFilter1Tests.pl  makefile.in
src/rfilter1/include/: calloc2.c  frstr1.c  strdup2.c  strmacs.h
src/rttm2ctm/: CMakeLists.txt
src/rttmSmooth/: CMakeLists.txt
src/rttmSort/: CMakeLists.txt
src/rttmValidator/: CMakeLists.txt  RttmValidatorTests.pl  makefile.in
src/sclite/: CMakeLists.txt  ScStatsTests.pl  ScliteTests.pl  align.c  makefile.in  memory.h  mfa.c  order.c  readpipe.c  sctk.h  sctkUnit.c  text.h
src/sclite/testdata/: tsc_stats.sh  tsclite.sh
src/sclite/testdata/base/: test13.pra  test13.prf  test13.sys  test13_a.pra
src/slatreport/: CMakeLists.txt  makefile.in  slatTest.pl  slatreport.pl
src/spkr2sad/: CMakeLists.txt
src/stm2rttm/: CMakeLists.txt
src/stmValidator/: CMakeLists.txt  StmValidatorTests.pl  makefile.in
src/tanweenFilt/: CMakeLists.txt  TanweenFiltTests.pl  makefile.in
src/test_suite/: sastt-case1.ref.rttm  test.rttm.-dh.out  test.rttm.in  test.rttm.out
src/utf_filt/: CMakeLists.txt  UtfFiltTests.pl  config.in  config.sh  makefile.in  utf_filt.pl.in
