cmake_minimum_required(VERSION 3.16)

add_subdirectory(acomp)
add_subdirectory(align2html)
add_subdirectory(asclite)
add_subdirectory(chfilt)
add_subdirectory(csrfilt)
add_subdirectory(ctmValidator)
add_subdirectory(def_art)
add_subdirectory(hamzaNorm)
add_subdirectory(md-eval)
add_subdirectory(mergectm2rttm)
add_subdirectory(rfilter1)
add_subdirectory(rttm2ctm)
add_subdirectory(rttmSmooth)
add_subdirectory(rttmSort)
add_subdirectory(rttmValidator)
add_subdirectory(sclite)
add_subdirectory(slatreport)
add_subdirectory(spkr2sad)
add_subdirectory(stm2rttm)
add_subdirectory(stmValidator)
